city menu bugs fixed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
     <header id="header">
         <div class="headerDiv">
             <div id="logo"><img src="./imgs/hat.png" style="object-fit: contain;" alt=""></div>
-            <div id="cityValue"><p id='city'>Город</p></div>
+               <div>
+                  <div id="cityValue">
+                     <span class="errCity"></span> 
+                     <p id='city'>Город</p>
+                  </div>
+               </div>
         </div>
     </header>
     <div id="mainDiv">
@@ -28,9 +33,11 @@
         </footer>
 
     </div>
+<script src="./evLisMethod.js"></script>
 <script src="./Header.js"></script>
 <script src="./dataGetter.js"></script>    
 <script src="./Card.js"></script>    
 <script src="./index.js"></script>
+
 </body>
 </html>
