--- a/index.html
+++ b/index.html
@@ -15,13 +15,21 @@
 <body>
     <header id="header">
         <div class="headerDiv">
-            <div id="logo"><img src="./imgs/hat.png" style="object-fit: contain;" alt=""></div>
-               <div>
-                  <div id="cityValue">
-                     <span class="errCity"></span> 
-                     <p id='city'>Город</p>
-                  </div>
-               </div>
+            <div id="logo">
+                <img src="./imgs/hat.png" style="object-fit: contain; height:50px" alt="">
+            </div>
+            <div id="activeElements">
+            <div id="mode">
+                <p id="modeName">
+                    10 ч.
+                </p>
+            </div>
+            <div id="cityValue">
+                <span class="arrCity"></span> 
+                <p id='city'>Город</p>
+            </div>
+            </div>
+               
         </div>
     </header>
     <div id="mainDiv">
@@ -38,6 +46,7 @@
 <script src="./dataGetter.js"></script>    
 <script src="./Card.js"></script>    
 <script src="./index.js"></script>
+<script src="./dataGetter3d.js"></script>
 
 </body>
 </html>
